Controler y metodos para obtener usuario  y datos del cliente
Controler y metodos para obtener usuario  y datos del cliente

--- a/api.core.trans/appsettings.json
+++ b/api.core.trans/appsettings.json
@@ -1,15 +1,18 @@
 ﻿{
-  "Logging": {
-    "IncludeScopes": false,
-    "Debug": {
-      "LogLevel": {
-        "Default": "Warning"
-      }
-    },
-    "Console": {
-      "LogLevel": {
-        "Default": "Warning"
-      }
-    }
-  }
+	"ConnectionStrings": {
+		"DefaultConnection": "Data Source=DESKTOP-IBN05PO;Database=FBS_SacPelileo;user id=sa;password=123456;Trusted_Connection=True;"
+	},
+	"Logging": {
+		"IncludeScopes": false,
+		"Debug": {
+			"LogLevel": {
+				"Default": "Warning"
+			}
+		},
+		"Console": {
+			"LogLevel": {
+				"Default": "Warning"
+			}
+		}
+	}
 }
